--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -716,7 +716,7 @@ textarea {
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     border-radius: 3px;
-    ;
+;
     width: 35%;
     color: #ffffff;
 }
@@ -777,12 +777,13 @@ a.button:hover {
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
+    height: 275px;
 }
 
 .item-container img {
     display: block;
     width: 100%;
-    height: auto;
+    height: 100%;
 }
 
 .item-container .item-caption {
@@ -872,6 +873,7 @@ a.button:hover {
 }
 
 .item-container .item-caption span {
+    padding-top: 20px;
     font-size: 22px;
 }
 
