--- a/src/main/resources/static/manage/css/login.css
+++ b/src/main/resources/static/manage/css/login.css
@@ -24,7 +24,7 @@ body {
 
 .login-bg {
     /*background: #eeeeee url() 0 0 no-repeat;*/
-    background: url(../images/bg2.png) no-repeat center;
+    background: url(../images/bg.png) no-repeat center;
     background-size: cover;
     overflow: hidden;
 }
@@ -114,7 +114,7 @@ select:focus {
 }
 
 .login hr {
-    background: #fff url() 0 0 no-repeat;
+    background: #fff url('#') 0 0 no-repeat;
 }
 
 .login hr.hr15 {
@@ -216,7 +216,7 @@ xblock {
 
 .page a {
     display: inline-block;
-    background: #fff url() 0 0 no-repeat;
+    background: #fff url('#') 0 0 no-repeat;
     color: #888;
     padding: 10px;
     min-width: 15px;
@@ -232,7 +232,7 @@ xblock {
 
 .page span.current {
     display: inline-block;
-    background: #009688 url() 0 0 no-repeat;
+    background: #009688 url('#') 0 0 no-repeat;
     color: #fff;
     padding: 10px;
     min-width: 15px;
@@ -246,7 +246,18 @@ xblock {
 }
 
 .page .pagination li.active span {
-    background: #009688 url() 0 0 no-repeat;
+    background: #009688 url('#') 0 0 no-repeat;
     color: #fff;
     border: 1px solid #009688;
+}
+
+/*验证码*/
+#verifyCode{
+    width: 150px;
+    display: inline-block;
+}
+#verifyImg{
+    width: 150px;
+    height: 50px;
+    float: right;
 }
